--- a/.config
+++ b/.config
@@ -449,8 +449,8 @@ CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 
 #  服务
 #docker
-CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 
 #  ShadowSocksR Plus+
 CONFIG_PACKAGE_luci-app-ssr-plus=y
