--- a/.config
+++ b/.config
@@ -553,7 +553,7 @@ CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
 # VPN
 
 # 内网穿透 
-CONFIG_PACKAGE_luci-app-zerotier=y
-CONFIG_PACKAGE_luci-app-zerotier-zh-cn=y
+#CONFIG_PACKAGE_luci-app-zerotier=y
+#CONFIG_PACKAGE_luci-app-zerotier-zh-cn=y
 
 ##############################################################################################
