--- a/.config
+++ b/.config
@@ -542,11 +542,11 @@ CONFIG_PACKAGE_luci-app-vsftpd=y
 #  网络
 
 #  TurboACC加速
-#CONFIG_PACKAGE_luci-app-turboacc=y
-#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y   # turbo acc加速
-#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
-#CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
-#CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
+CONFIG_PACKAGE_luci-app-turboacc=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y   # turbo acc加速
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
 
 ##############################################################################################
 
