--- a/.config
+++ b/.config
@@ -1,4 +1,4 @@
-ONFIG_TARGET_x86=y
+CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_PACKAGE_default-settings=y
