--- a/.config
+++ b/.config
@@ -381,14 +381,14 @@ CONFIG_PACKAGE_strongswan-mod-xcbc=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_vlmcsd=y
-CONFIG_PACKAGE_vsftpd-alt=y
+CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_wol=y
 # CONFIG_PACKAGE_xfrm is not set
 CONFIG_PACKAGE_xray-core=y
 # CONFIG_PACKAGE_xray-example is not set
 # CONFIG_PACKAGE_ykclient is not set
-CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_zerotier is not set
 # CONFIG_SIMPLE_OBFS_STATIC_LINK is not set
 CONFIG_STRONGSWAN_ROUTING_TABLE="220"
 CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
@@ -532,21 +532,21 @@ CONFIG_PACKAGE_luci-app-openclash=y
 #  NAS
 
 #  文件助手
-CONFIG_PACKAGE_luci-app-fileassistant=y
+# CONFIG_PACKAGE_luci-app-fileassistant=y
 
 # ftp
-CONFIG_PACKAGE_luci-app-vsftpd=y
+# CONFIG_PACKAGE_luci-app-vsftpd=y
 
 ##############################################################################################
 
 #  网络
 
 #  TurboACC加速
-CONFIG_PACKAGE_luci-app-turboacc=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y   # turbo acc加速
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
-CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
-CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
+# CONFIG_PACKAGE_luci-app-turboacc=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y   # turbo acc加速
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE=y
+# CONFIG_PACKAGE_luci-app-turboacc-zh-cn=y
 
 ##############################################################################################
 
