--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -107,7 +107,7 @@ jobs:
       id: package
       run: |
         cd openwrt
-# make defconfig
+        make menuconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
