--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,7 +20,7 @@ on:
         default: 'false'
 
 env:
-  #REPO_URL: https://github.com/coolsnowwolf/lede
+# REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
@@ -107,7 +107,7 @@ jobs:
       id: package
       run: |
         cd openwrt
-        make menuconfig
+        make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
